Fixed the issue with buttons shift

--- a/style.css
+++ b/style.css
@@ -48,11 +48,13 @@
 .SingleDatePickerInput, .DateInput, .DateInput_input {
   background-color: transparent !important;
   color: #fff !important;
-  font-size: 14px !important;
+  font-size: 16px !important;
   font-weight: 700 !important;
   padding: 0 !important;
   border-bottom: 0 !important;
-  text-align: center;
+  text-align: center !important;
+  line-height: 0 !important;
+  font-family: "Verdana !important";
 }
 
 .CalendarDay__default {
